# neblinia-speech

./: .gitignore  MODEL_CARD.md  MODEL_CARD_preview-1.0.md  README.md  methods_results.json  optuna_neblinia.db  pyproject.toml
docs/: RECREATE_DATA.md  findings.md  tuning.md
report/: make_figures.R  make_release_figures.R  neblinia_speech_report.typ
report/data/: largev3_auto.json  per_language.csv  scoreboard.csv
scripts/: build_broad_manifest.py  data_indomain.py  debug_parakeet.py  diag_byt5.py  diag_byte.py  diagnose_hallucination.py  eval_dev_fast.py  eval_model.py  export_ct2.py  gen_bestofk.py  pass_at_k.py  prep_indomain.py  prep_indomain_gpu.py  prep_train.py  process_slr89.py  sweep_len.py  sweep_methods.py  sweep_optuna.py  train_byt5_speech.py  train_byte_whisper.py  train_gspo.py  train_parakeet.py  train_peft.py  train_scratch.py  train_unsloth.py
